--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 
 
 <head>
+
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -10,34 +11,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script type="text/javascript" src="./static/logic.js"></script>
+    <link rel="stylesheet" href="../static/css/style.css">
 
 
     <title>Hockey Project Worksheet</title>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Team Goalie Gurus</h1>
-            <p class="lead">Worksheet</p>
-        </div>
-    </div>
+
 </head>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-</script>
+    </script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-</script>
+    </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-</script>
+    </script>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">894</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Predictive Analysis</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">APIs</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+
+    <div class="jumbotron jumbotron-fluid ">
+        <div class="container">
+            <img src="../static/894 Banner 2.png" class="img-fluid" alt="Responsive image">
+            <div data-type="countup" data-id="154727" class="tickcounter"
+                style="width: 100%; position: relative; padding-bottom: 25%"><a
+                    href="//www.tickcounter.com/countup/154727/wayne-gretzky-record-unbroken-since"
+                    title="Wayne Gretzky's career goalrecord unbroken since...">Wayne Gretzky record unbroken
+                    since...</a><a href="//www.tickcounter.com/countup" title="Countup">Countup</a></div>
+            <script>(function (d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
+        </div>
+    </div>
+
 
     <div class="container">
 
+
         <div class="row">
             <div class="col">
-                <h1> Chart -1</h1>
+                <h1> Compare the top players' performance with Wayne Gretzky</h1>
                 <p>Individual Player's progress</p>
                 <select id="selPlayer"></select>
 
@@ -50,8 +82,8 @@
         </div>
         <div class="row">
             <div class="col">
-                <h1> Chart -2</h1>
-                <p>This is a presentation of the scoring statitics from AWS Api</p>
+                <h1> Explore historical statistics of NHL players</h1>
+                <p>Use the dropdown menu to explore different metrics</p>
                 <H5>
                     <div id="hoverinfo" style="margin-left:80px;">Hover test</div>
                 </H5>
@@ -63,28 +95,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col">
-                <h1> Chart -3</h1>
-                <p>scoring statistics by Team from AWS Api</p>
-                <H5>
-                    <div id="hoverinfo2" style="margin-left:80px;">Hover test</div>
-                </H5>
-
-            </div>
-            <div class="col">
-                <div id="myDiv3">
-                    <!-- Plotly chart will be drawn inside this DIV -->
-                </div>
-            </div>
-        </div>
-
-
-
-
-
-        <!-- 16:9 aspect ratio -->
 
 
     </div>
