--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
                 style="width: 100%; position: relative; padding-bottom: 25%"><a
                     href="//www.tickcounter.com/countup/154727/wayne-gretzky-record-unbroken-since"
                     title="Wayne Gretzky's career goalrecord unbroken since...">Wayne Gretzky record unbroken
-                    since...</a><a href="//www.tickcounter.com/countup" title="Countup">Countup</a></div>
+                    since...</a><a href="" title="Countup">Countup</a></div>
             <script>(function (d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
         </div>
     </div>
