--- a/templates/index.html
+++ b/templates/index.html
@@ -85,14 +85,19 @@
                     the foreseeable future. He owns many records from the ranks of peewee hockey to the NHL, sitting
                     atop every meaningful offensive category, often miles ahead of the players ranked second.</p>
                 <p> Bio Source: www.nhl.com</p>
+                <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;">
             </div>
         </div>
         <div class="row">
             <div class="col">
                 <hr>
-                <h3> Compare the top players' performance with Wayne Gretzky</h3>
+                <h3> Compare top players' performance with Wayne Gretzky</h3>
                 <p>Individual Player's progress</p>
                 <select id="selPlayer"></select>
+                <hr>
+                <p>Ovechkin is considered by many as the greatest goal scorer in NHL history,[95] with what some
+                    consider a real chance at overtaking Wayne Gretzky in total career goals (894).</p>
+                <p> <img src="../static/ovechkin.png" style="float:left;width:300px;height:500;"> </p>
 
             </div>
             <div class="col">
@@ -113,6 +118,10 @@
                 <hr>
                 <h3> Explore historical statistics of NHL players</h3>
                 <p>Use the dropdown menu to explore different metrics</p>
+
+                <img src="../static/downleft arrow.png" style="width:125px;height:150px;">
+
+
                 <H5>
                     <div id="hoverinfo" style="margin-left:80px;"></div>
                 </H5>
