--- a/goalie_gurus/static/css/style.css
+++ b/goalie_gurus/static/css/style.css
@@ -1,6 +1,17 @@
-/* .jumbotron {
-  background-image: url("../894\ Banner\ 2.png");
-  background-size: cover;
+body {
+  margin: 0;
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 0.8125rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: rgba(251, 251, 223, 0.979);
   
-  
-} */
+}
+.jumbotron{
+  background-color: rgba(251, 251, 223, 0.979);
+}
+  .navbar{
+    background-color: rgba(251, 251, 223, 0.979);
+  }
