--- a/goalie_gurus/templates/index.html
+++ b/goalie_gurus/templates/index.html
@@ -22,13 +22,13 @@
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
+</script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
+</script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
+</script>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -40,10 +40,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Predictive Analysis</a>
+                    <a class="nav-link" href="./model.html">Predictive Analysis</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">APIs</a>
@@ -61,7 +61,16 @@
                     href="//www.tickcounter.com/countup/154727/wayne-gretzky-record-unbroken-since"
                     title="Wayne Gretzky's career goalrecord unbroken since...">Wayne Gretzky record unbroken
                     since...</a><a href="" title="Countup">Countup</a></div>
-            <script>(function (d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
+            <script>
+                (function (d, s, id) {
+                    var js, pjs = d.getElementsByTagName(s)[0];
+                    if (d.getElementById(id)) return;
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = "//www.tickcounter.com/static/js/loader.js";
+                    pjs.parentNode.insertBefore(js, pjs);
+                }(document, "script", "tickcounter-sdk"));
+            </script>
         </div>
     </div>
 
@@ -91,21 +100,44 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h3> Compare top players' performance with Wayne Gretzky</h3>
-                <p>Individual Player's progress</p>
-                <select id="selPlayer"></select>
+                <h3> Data Prediction</h3>
+                <p>Ovechkin's progress to breaking the record</p>
                 <hr>
                 <p>Ovechkin is considered by many as the greatest goal scorer in NHL history,[95] with what some
                     consider a real chance at overtaking Wayne Gretzky in total career goals (894).</p>
+
                 <p> <img src="../static/ovechkin.png" style="float:left;width:300px;height:500;"> </p>
 
+
             </div>
+            <div class="col">
+                <hr>
+                <div id="myDivODB">
+                    <!-- Plotly chart will be drawn inside this DIV -->
+                </div>
+            </div>
+        </div>
+        <div class="row">
             <div class="col">
                 <hr>
                 <div id="myDiv">
                     <!-- Plotly chart will be drawn inside this DIV -->
                 </div>
             </div>
+            <div class="col">
+                <hr>
+                <h3> Compare top players' performance with Wayne Gretzky</h3>
+                <p>Individual Player's progress</p>
+                <select id="selPlayer"></select>
+                <hr>
+                <p>Ovechkin is considered by many as the greatest goal scorer in NHL history,[95] with what some
+                    consider a real chance at overtaking Wayne Gretzky in total career goals (894).</p>
+
+                <p> <img src="../static/Yellow Arrow Circle.png" style="float:left;width:125px;height:150;"> </p>
+
+
+            </div>
+
         </div>
         <div class="row">
             <div class="col">
@@ -119,7 +151,7 @@
                 <h3> Explore historical statistics of NHL players</h3>
                 <p>Use the dropdown menu to explore different metrics</p>
 
-                <img src="../static/downleft arrow.png" style="width:125px;height:150px;">
+                <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;">
 
 
                 <H5>
