--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
                 <p>Ovechkin is considered by many as the greatest goal scorer in NHL history,[95] with what some
                     consider a real chance at overtaking Wayne Gretzky in total career goals (894).</p>
 
-                <p> <img src="../static/ovechkin.png" style="float:left;width:300px;height:500;"> </p>
+                <p> <img src="../static/ovechkin.png" style="float:right;width:300px;height:500;"> </p>
 
 
             </div>
