--- a/templates/api.html
+++ b/templates/api.html
@@ -16,7 +16,7 @@
 
 
 
-    <title>Hockey Project Worksheet</title>
+    <title>APIs</title>
 
 </head>
 
@@ -53,114 +53,32 @@
         </div>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid ">
-        <div class="container">
-            <img src="../static/894 Banner 2.png" class="img-fluid" alt="Responsive image">
-            <div data-type="countup" data-id="154727" class="tickcounter"
-                style="width: 100%; position: relative; padding-bottom: 25%"><a
-                    href="//www.tickcounter.com/countup/154727/wayne-gretzky-record-unbroken-since"
-                    title="Wayne Gretzky's career goalrecord unbroken since...">Wayne Gretzky record unbroken
-                    since...</a><a href="" title="Countup">Countup</a></div>
-            <script>
-                (function (d, s, id) {
-                    var js, pjs = d.getElementsByTagName(s)[0];
-                    if (d.getElementById(id)) return;
-                    js = d.createElement(s);
-                    js.id = id;
-                    js.src = "//www.tickcounter.com/static/js/loader.js";
-                    pjs.parentNode.insertBefore(js, pjs);
-                }(document, "script", "tickcounter-sdk"));
-            </script>
-        </div>
-    </div>
+
 
 
     <div class="container">
 
         <div class="row">
             <div class="col">
-                <iframe
-                    src='https://www.nhl.com/video/embed/memories-gretzky-pots-802nd-goal/t-277350912/c-50562703?autostart=false'
-                    width='540' height='360'></iframe>
-
+                <br>
+                <H3> List of API's available</H3>
+                <p>Data from hockey reference. This table contains player stats for every season since 1917. This is
+                    updated nightly
+                </p>
+                <li>https://goalie-gurus.herokuapp.com/api/data/historic_data</li>
+                <a href="https://goalie-gurus.herokuapp.com/api/data/historic_data">Historic data</a>
+                <hr>
+                <p>Data from NHL API. This table contains game logs from every game for the top 56 goal scorers of all
+                    time. This is updated nightly for OV, Marleau, & Crosby.</p>
+                <li>https://goalie-gurus.herokuapp.com/api/data/current_scorers_data</li>
+                <a href="https://goalie-gurus.herokuapp.com/api/data/current_scorers_data">Top 56</a>
 
             </div>
             <div class="col">
-                <H3> The Record</H3>
-                <p>Wayne Gretzky Bio
-                    Every superlative has been used, many strung together, to describe the otherwordly talent of Wayne
-                    Gretzky, who commonly is regarded as the greatest hockey player ever.
-                    Based purely on statistics, there is no argument -- the man is without peer, nor will he have one in
-                    the foreseeable future. He owns many records from the ranks of peewee hockey to the NHL, sitting
-                    atop every meaningful offensive category, often miles ahead of the players ranked second.</p>
-                <p> Bio Source: www.nhl.com</p>
-                <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;">
+
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h3> Data Prediction</h3>
-                <p>Ovechkin's progress to breaking the record</p>
-                <hr>
-                <p>Ovechkin is considered by many as the greatest goal scorer in NHL history,[95] with what some
-                    consider a real chance at overtaking Wayne Gretzky in total career goals (894).</p>
 
-                <p> <img src="../static/ovechkin.png" style="float:right;width:300px;height:500;"> </p>
-
-
-            </div>
-            <div class="col">
-                <hr>
-                <div id="myDivODB">
-                    <!-- Plotly chart will be drawn inside this DIV -->
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <hr>
-                <div id="myDiv">
-                    <!-- Plotly chart will be drawn inside this DIV -->
-                </div>
-            </div>
-            <div class="col">
-                <hr>
-                <h3> Compare top players' performance with Wayne Gretzky</h3>
-                <p>Individual Player's progress</p>
-                <select id="selPlayer"></select>
-                <hr>
-                <p>Ovechkin is considered by many as the greatest goal scorer in NHL history,[95] with what some
-                    consider a real chance at overtaking Wayne Gretzky in total career goals (894).</p>
-
-                <p> <img src="../static/Yellow Arrow Circle.png" style="float:left;width:125px;height:150;"> </p>
-
-
-            </div>
-
-        </div>
-        <div class="row">
-            <div class="col">
-                <hr>
-                <div id="myDiv2">
-                    <!-- Plotly chart will be drawn inside this DIV -->
-                </div>
-            </div>
-            <div class="col">
-                <hr>
-                <h3> Explore historical statistics of NHL players</h3>
-                <p>Use the dropdown menu to explore different metrics</p>
-
-                <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;">
-
-
-                <H5>
-                    <div id="hoverinfo" style="margin-left:80px;"></div>
-                </H5>
-
-            </div>
-
-        </div>
 
 
     </div>
@@ -168,7 +86,7 @@
 
     <!-- <div id="myDiv">
         <!-- Plotly chart will be drawn inside this DIV -->
-    </div> -->
+    </div>
     </div>
 
 
