--- a/goalie_gurus/templates/index.html
+++ b/goalie_gurus/templates/index.html
@@ -16,7 +16,7 @@
 
 
 
-    <title>Hockey Project Worksheet</title>
+    <title>894</title>
 
 </head>
 
@@ -43,8 +43,12 @@
                     <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./model.html">Predictive Analysis</a>
+                    <a class="nav-link" href="./model.html">OV Model Explained</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./career.html">OV Career Goals Projection</a>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">APIs</a>
                 </li>
