--- a/goalie_gurus/templates/index.html
+++ b/goalie_gurus/templates/index.html
@@ -16,7 +16,7 @@
 
 
 
-    <title>Hockey Project Worksheet</title>
+    <title>894</title>
 
 </head>
 
@@ -59,8 +59,8 @@
             <div data-type="countup" data-id="154727" class="tickcounter"
                 style="width: 100%; position: relative; padding-bottom: 25%"><a
                     href="//www.tickcounter.com/countup/154727/wayne-gretzky-record-unbroken-since"
-                    title="Wayne Gretzky's career goalrecord unbroken since...">Wayne Gretzky record unbroken
-                    since...</a><a href="" title="Countup">Countup</a></div>
+                    title="Wayne Gretzky's career goalrecord unbroken since...">Wayne Gretzky Career Goal's Record Unbroken
+                    Since...</a><a href="" title="Countup">Countup</a></div>
             <script>
                 (function (d, s, id) {
                     var js, pjs = d.getElementsByTagName(s)[0];
@@ -121,7 +121,7 @@
             <div class="col">
                 <hr>
                 <h3> Data Prediction</h3>
-                <p>Ovechkin's progress to breaking the record</p>
+                <p>Ovechkin's progress to breaking the career goals record</p>
                 <hr>
                 <p>While Gretzky is likely to remain the greatest overall player in hockey history, one player, Alex Ovechkin,
                      is considered by many as the greatest goal scorer in NHL history with a real chance at 
@@ -135,7 +135,7 @@
                     Linear Regression Modeling algorithm which analyzes the historic perfomances of other
                     goal scoring leaders at similar points in their careers.
                 </p>
-                <p>This chart will update regularly using our bespoke automated webscraping tool developed
+                <p>This chart will update nightly using our bespoke automated webscraping tool developed
                     specifically for this purpose.
                 </p>
 
@@ -171,6 +171,8 @@
                    <p>You may also note how players tend to score goals at a decreased rate towards the end of 
                     their careers.</p>
 
+                    <p><i>updated nightly for active players</i></p>
+
                 <p> <img src="../static/Yellow Arrow Circle.png" style="float:left;width:125px;height:150;"> </p>
 
 
@@ -191,7 +193,7 @@
                     Ever wonder how the game is changing? Are players in general scoring more goals now than they used to?
                     Are rookies entering The League more competitive now?<br>
                     Use the dropdown menu to explore different metrics for EVERY PLAYER EVER and find out!</p>
-
+                    <p><i>updated nightly for most recent season</i>
                 <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;">
 
 
