--- a/goalie_gurus/templates/index.html
+++ b/goalie_gurus/templates/index.html
@@ -40,16 +40,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/predictions">OV Daily Prediction Log</a>
+                    <a class="nav-link" href="model.html">Predictive Analysis</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/model">OV Career Goals Model</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/api">APIs</a>
+                    <a class="nav-link" href="api.html">APIs</a>
                 </li>
 
             </ul>
@@ -62,7 +59,7 @@
             <div data-type="countup" data-id="154727" class="tickcounter"
                 style="width: 100%; position: relative; padding-bottom: 25%"><a
                     href="//www.tickcounter.com/countup/154727/wayne-gretzky-record-unbroken-since"
-                    title="Wayne Gretzky's career goal record unbroken since...">Wayne Gretzky Career Goal's Record Unbroken
+                    title="Wayne Gretzky's career goalrecord unbroken since...">Wayne Gretzky Career Goal's Record Unbroken
                     Since...</a><a href="" title="Countup">Countup</a></div>
             <script>
                 (function (d, s, id) {
@@ -84,7 +81,7 @@
             <div class="col">
                 <iframe
                     src='https://www.nhl.com/video/embed/memories-gretzky-pots-802nd-goal/t-277350912/c-50562703?autostart=false'
-                    width='540'></iframe>
+                    width='540' height='360'></iframe>
 
 
             </div>
