--- a/goalie_gurus/templates/index.html
+++ b/goalie_gurus/templates/index.html
@@ -40,7 +40,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="model.html">Predictive Analysis</a>
@@ -81,7 +81,7 @@
             <div class="col">
                 <iframe
                     src='https://www.nhl.com/video/embed/memories-gretzky-pots-802nd-goal/t-277350912/c-50562703?autostart=false'
-                    width='540' height='360'></iframe>
+                    width='540' height='200'></iframe>
 
 
             </div>
