--- a/goalie_gurus/templates/index.html
+++ b/goalie_gurus/templates/index.html
@@ -32,7 +32,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">894</a>
+        <a class="navbar-brand" href="#"><b>894</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="model.html">Predictive Analysis</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="api.html">APIs</a>
+                    <a class="nav-link" href="/api">APIs</a>
                 </li>
 
             </ul>
@@ -59,7 +59,7 @@
             <div data-type="countup" data-id="154727" class="tickcounter"
                 style="width: 100%; position: relative; padding-bottom: 25%"><a
                     href="//www.tickcounter.com/countup/154727/wayne-gretzky-record-unbroken-since"
-                    title="Wayne Gretzky's career goalrecord unbroken since...">Wayne Gretzky Career Goal's Record Unbroken
+                    title="Wayne Gretzky's career goal record unbroken since...">Wayne Gretzky Career Goal's Record Unbroken
                     Since...</a><a href="" title="Countup">Countup</a></div>
             <script>
                 (function (d, s, id) {
@@ -81,7 +81,7 @@
             <div class="col">
                 <iframe
                     src='https://www.nhl.com/video/embed/memories-gretzky-pots-802nd-goal/t-277350912/c-50562703?autostart=false'
-                    width='540' height='200'></iframe>
+                    width='540' height='400'></iframe>
 
 
             </div>
