--- a/goalie_gurus/templates/index.html
+++ b/goalie_gurus/templates/index.html
@@ -43,8 +43,11 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="model.html">Predictive Analysis</a>
+                    <a class="nav-link" href="/predictions">OV Prediction Log</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/model">OV Career Goals Model</a>
+                </li>                
                 <li class="nav-item">
                     <a class="nav-link" href="/api">APIs</a>
                 </li>
