--- a/goalie_gurus/templates/api.html
+++ b/goalie_gurus/templates/api.html
@@ -38,15 +38,18 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav" style="list-style: none;">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./model.html">Predictive Analysis</a>
+                    <a class="nav-link" href="/predictions">OV Prediction Log</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">APIs</a>
+                    <a class="nav-link" href="/model">OV Career Goals Model</a>
+                </li>                
+                <li class="nav-item">
+                    <a class="nav-link" href="/api">APIs</a>
                 </li>
 
             </ul>
@@ -65,13 +68,11 @@
                 <p>Data from hockey reference. This table contains player stats for every season since 1917. This is
                     updated nightly
                 </p>
-                <li>https://goalie-gurus.herokuapp.com/api/data/historic_data</li>
-                <a href="https://goalie-gurus.herokuapp.com/api/data/historic_data">Historic data</a>
+                <li><a href="https://goalie-gurus.herokuapp.com/api/data/historic_data">https://goalie-gurus.herokuapp.com/api/data/historic_data</a></
                 <hr>
                 <p>Data from NHL API. This table contains game logs from every game for the top 56 goal scorers of all
                     time. This is updated nightly for OV, Marleau, & Crosby.</p>
-                <li>https://goalie-gurus.herokuapp.com/api/data/current_scorers_data</li>
-                <a href="https://goalie-gurus.herokuapp.com/api/data/current_scorers_data">Top 56</a>
+                <a href="https://goalie-gurus.herokuapp.com/api/data/current_scorers_data">https://goalie-gurus.herokuapp.com/api/data/current_scorers_data</a>
 
             </div>
             <div class="col">
