--- a/goalie_gurus/templates/model.html
+++ b/goalie_gurus/templates/model.html
@@ -40,13 +40,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="model.html">Predictive Analysis</a>
+                    <a class="nav-link" href="/predictions">OV Prediction Log</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="api.html">APIs</a>
+                    <a class="nav-link" href="/model">OV Career Goals Model</a>
+                </li>                
+                <li class="nav-item">
+                    <a class="nav-link" href="/api">APIs</a>
                 </li>
 
             </ul>
