add zach model 2

--- a/goalie_gurus/templates/api.html
+++ b/goalie_gurus/templates/api.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="/predictions">OV Prediction Log</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/model">OV Career Goals Model</a>
+                    <a class="nav-link" href="/goalmodel">OV Career Goals Model</a>
                 </li>                
                 <li class="nav-item">
                     <a class="nav-link" href="/api">APIs</a>
@@ -64,15 +64,17 @@
         <div class="row">
             <div class="col">
                 <br>
-                <H3> List of API's available</H3>
-                <p>Data from hockey reference. This table contains player stats for every season since 1917. This is
+                <H3><u>List of API's available</u></H3>
+                <ul>
+                <li><p>Data from hockey reference. This table contains player stats for every season since 1917. This is
                     updated nightly
                 </p>
-                <li><a href="https://goalie-gurus.herokuapp.com/api/data/historic_data">https://goalie-gurus.herokuapp.com/api/data/historic_data</a></
-                <hr>
-                <p>Data from NHL API. This table contains game logs from every game for the top 56 goal scorers of all
+                <a href="https://goalie-gurus.herokuapp.com/api/data/historic_data">https://goalie-gurus.herokuapp.com/api/data/historic_data</a>
+                <hr></li>
+                <li><p>Data from NHL API. This table contains game logs from every game for the top 56 goal scorers of all
                     time. This is updated nightly for OV, Marleau, & Crosby.</p>
-                <a href="https://goalie-gurus.herokuapp.com/api/data/current_scorers_data">https://goalie-gurus.herokuapp.com/api/data/current_scorers_data</a>
+                <a href="https://goalie-gurus.herokuapp.com/api/data/current_scorers_data">https://goalie-gurus.herokuapp.com/api/data/current_scorers_data</a></li>
+                </ul>
 
             </div>
             <div class="col">
