add zach model 3

--- a/goalie_gurus/templates/api.html
+++ b/goalie_gurus/templates/api.html
@@ -74,6 +74,8 @@
                 <li><p>Data from NHL API. This table contains game logs from every game for the top 56 goal scorers of all
                     time. This is updated nightly for OV, Marleau, & Crosby.</p>
                 <a href="https://goalie-gurus.herokuapp.com/api/data/current_scorers_data">https://goalie-gurus.herokuapp.com/api/data/current_scorers_data</a></li>
+                <li><p>Data from NHL API. This table contains almost all NHL skater IDs of all-time.  It can be used to navigate and automate the NHL API</p>
+                <a href="https://goalie-gurus.herokuapp.com/api/data/current_scorers_data">https://goalie-gurus.herokuapp.com/api/data/player_data</a></li>
                 </ul>
 
             </div>
