add zach model 4

--- a/goalie_gurus/templates/predictions.html
+++ b/goalie_gurus/templates/predictions.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="/predictions">OV Prediction Log</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/model">OV Career Goals Model</a>
+                    <a class="nav-link" href="/goalmodel">OV Career Goals Model</a>
                 </li>                
                 <li class="nav-item">
                     <a class="nav-link" href="/api">APIs</a>
