--- a/goalie_gurus/templates/api.html
+++ b/goalie_gurus/templates/api.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/predictions">OV Prediction Log</a>
+                    <a class="nav-link" href="/predictions">OV Prediction Log<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/goalmodel">OV Career Goals Model</a>
