--- a/goalie_gurus/templates/index.html
+++ b/goalie_gurus/templates/index.html
@@ -59,21 +59,7 @@
     <div class="jumbotron jumbotron-fluid ">
         <div class="container">
             <img src="../static/894 Banner 2.png" class="img-fluid" alt="Responsive image">
-            <div data-type="countup" data-id="154727" class="tickcounter"
-                style="width: 100%; position: relative; padding-bottom: 25%"><a
-                    href="//www.tickcounter.com/countup/154727/wayne-gretzky-record-unbroken-since"
-                    title="Wayne Gretzky's career goal record unbroken since...">Wayne Gretzky Career Goal's Record Unbroken
-                    Since...</a><a href="" title="Countup">Countup</a></div>
-            <script>
-                (function (d, s, id) {
-                    var js, pjs = d.getElementsByTagName(s)[0];
-                    if (d.getElementById(id)) return;
-                    js = d.createElement(s);
-                    js.id = id;
-                    js.src = "//www.tickcounter.com/static/js/loader.js";
-                    pjs.parentNode.insertBefore(js, pjs);
-                }(document, "script", "tickcounter-sdk"));
-            </script>
+            <div data-type="countup" data-id="154919" class="tickcounter" style="width: 100%; position: relative; padding-bottom: 25%"><a href="//www.tickcounter.com/countup/154919/wayne-gretzkys-career-goals-record-unbroken-since" title="Wayne Gretzky&#39;s Career Goals Record Unbroken Since...">Wayne Gretzky&#39;s Career Goals Record Unbroken Since...</a><a href="//www.tickcounter.com/countup" title="Countup">Countup</a></div><script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
         </div>
     </div>
 
@@ -141,6 +127,7 @@
                 <p>This chart will update nightly using our bespoke automated webscraping tool developed
                     specifically for this purpose.
                 </p>
+                <p>To see the models predictions head here: <a href="/predictions">OV Prediction Log</a></p>
 
                 <p> <img src="../static/ovechkin.png" style="float:right;width:300px;height:500;"> </p>
 
