--- a/goalie_gurus/templates/index.html
+++ b/goalie_gurus/templates/index.html
@@ -100,7 +100,7 @@
                 </table>
                 </p>
                 <p> Bio Source: www.nhl.com</p>
-                <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;">
+                <!-- <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;"> -->
             </div>
         </div>
         <div class="row">
@@ -160,7 +160,7 @@
 
                     <p><i>updated nightly for active players</i></p>
 
-                <p> <img src="../static/Yellow Arrow Circle.png" style="float:left;width:125px;height:150;"> </p>
+                <!-- <p> <img src="../static/Yellow Arrow Circle.png" style="float:left;width:125px;height:150;"> </p> -->
 
 
             </div>
@@ -181,7 +181,7 @@
                     Are rookies entering The League more competitive now?<br>
                     Use the dropdown menu to explore different metrics for EVERY PLAYER EVER and find out!</p>
                     <p><i>updated nightly for most recent season</i>
-                <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;">
+                <!-- <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;"> -->
 
 
                 <H5>
