cleaning prediction image

--- a/goalie_gurus/templates/index.html
+++ b/goalie_gurus/templates/index.html
@@ -112,23 +112,20 @@
                 <p>While Gretzky is likely to remain the greatest overall player in hockey history, one player, Alex Ovechkin,
                      is considered by many as the greatest goal scorer in NHL history with a real chance at 
                      overtaking Wayne Gretzky in total career goals (894).</p>
-                <p>Use the figure to the right to observe Ovechkin's progress as a goal scorer. The dotted horizontal line
-                    represents the most goals scored by any player in his career in the NHL (Wayne Gretzky's record of 894 goals).
-                    The vertical dotted line represents Alex Ovechkin's most recent game.  The colored solid line shows the career sum total goals
-                    scored for each game.
+                <p>The figure to the right predicts Ovechkin's progress towards eclipsing Gretzky's career goals record. The dotted horizontal line
+                    represents Wayne Gretzky's record of 894 career goals.
+                    The vertical dotted line represents Alex Ovechkin's most recent game.  The colored solid trend line shows Ovechkin's career goals by each game.
                 </p>
-                <p>Data to the right of the most recent game is a projection based on an Advanced Quantative
-                    Linear Regression Modeling algorithm which analyzes the historic perfomances of other
-                    goal scoring leaders at similar points in their careers.
+                <p>Data to the right of the dotted line is a projection based on an Advanced Quantative
+                    Linear Regression Modeling algorithm which analyzes the historic perfomances of other great goal scoring leaders at similar points in their careers.
                 </p>
                 <p>This chart will update nightly using our bespoke automated webscraping tool developed
                     specifically for this purpose.
                 </p>
-                <p>To see the models predictions head here: <a href="/predictions">OV Prediction Log</a></p>
-
+                <p>Every day the model logs it's predictions.  To see previous predictions head here: <a href="/predictions">OV Prediction Log</a></p>
+            </div>
+            <div class="col">
                 <p> <img src="../static/ovechkin.png" style="float:right;width:300px;height:500;"> </p>
-
-
             </div>
             <div class="col">
                 <hr>
@@ -203,3 +200,4 @@
 
 
 </body>
+</html>
