--- a/goalie_gurus/templates/index.html
+++ b/goalie_gurus/templates/index.html
@@ -125,9 +125,6 @@
                 <p>Every day the model logs it's predictions.  To see previous predictions head here: <a href="/predictions">OV Prediction Log</a></p>
             </div>
             <div class="col">
-                <p> <img src="../static/ovechkin.png" style="float:right;width:300px;height:500;"> </p>
-            </div>
-            <div class="col">
                 <hr>
                 <div id="myDivODB">
                     <!-- Plotly chart will be drawn inside this DIV -->
@@ -171,27 +168,32 @@
                 </div>
             </div>
             <div class="col">
-                <hr>
-                <h3> Explore historical statistics of NHL players</h3>
-                <p><i>They just don't play like they used to...</i><br>
-                    Ever wonder how the game is changing? Are players in general scoring more goals now than they used to?
-                    Are rookies entering The League more competitive now?<br>
-                    Use the dropdown menu to explore different metrics for EVERY PLAYER EVER and find out!</p>
-                    <p><i>updated nightly for most recent season</i>
-                <!-- <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;"> -->
-
-
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <hr>
+                            <h3> Explore historical statistics of NHL players</h3>
+                            <p><i>They just don't play like they used to...</i><br>
+                                Ever wonder how the game is changing? Are players in general scoring more goals now than they used to?
+                                Are rookies entering The League more competitive now?<br>
+                                Use the dropdown menu to explore different metrics for EVERY PLAYER EVER and find out!</p>
+                                <p><i>updated nightly for most recent season</i></p>
+                            <!-- <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;"> -->
+                        </div>
+                        <div class="col">
+                            <p> <img src="../static/ovechkin.png" style="float:right;width:300px;height:500;"> </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
                 <H5>
                     <div id="hoverinfo" style="margin-left:80px;"></div>
                 </H5>
 
-            </div>
-
         </div>
 
-
     </div>
-
+    </div>
 
     <!-- <div id="myDiv">
         <!-- Plotly chart will be drawn inside this DIV -->
