cleaning ov image 4

--- a/goalie_gurus/templates/index.html
+++ b/goalie_gurus/templates/index.html
@@ -168,29 +168,31 @@
                 </div>
             </div>
             <div class="col">
-                        <div class="col">
-                            <hr>
-                            <h3> Explore historical statistics of NHL players</h3>
-                            <p><i>They just don't play like they used to...</i><br>
-                                Ever wonder how the game is changing? Are players in general scoring more goals now than they used to?
-                                Are rookies entering The League more competitive now?<br>
-                                Use the dropdown menu to explore different metrics for EVERY PLAYER EVER and find out!</p>
-                                <p><i>updated nightly for most recent season</i></p>
-                            <!-- <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;"> -->
-                        </div>
-                        <br>
-                        <div class="col">
-                            <p> <img src="../static/ovechkin.png" style="float:right;width:300px;height:500;"> </p>
-                        </div>
-            </div>
+                
+                <hr>
+                <h3> Explore historical statistics of NHL players</h3>
+                <p><i>They just don't play like they used to...</i><br>
+                    Ever wonder how the game is changing? Are players in general scoring more goals now than they used to?
+                    Are rookies entering The League more competitive now?<br>
+                    Use the dropdown menu to explore different metrics for EVERY PLAYER EVER and find out!</p>
+                    <p><i>updated nightly for most recent season</i>
+                <!-- <img src="../static/yellow Arrow down.png" style="width:125px;height:150px;"> -->
                 <H5>
                     <div id="hoverinfo" style="margin-left:80px;"></div>
                 </H5>
 
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col">
+                <p> <img src="../static/ovechkin.png" style="float:right;width:300px;height:500;"> </p>
+            </div>
         </div>
 
+
     </div>
-    </div>
+
 
     <!-- <div id="myDiv">
         <!-- Plotly chart will be drawn inside this DIV -->
